fix: render copy button & white space

--- a/src/shared/ui/markdown-renderer/ui/particles/code/styles.module.scss
+++ b/src/shared/ui/markdown-renderer/ui/particles/code/styles.module.scss
@@ -1,7 +1,7 @@
 .component {
     position: relative;
     margin-bottom: 0.5rem;
-    white-space: pre-line;
+    white-space: pre;
 }
 
 .copy {
